--- a/Assets/UXML/SigmoidCurveVisualTree.uxml
+++ b/Assets/UXML/SigmoidCurveVisualTree.uxml
@@ -1,8 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <ui:VisualElement name="Pane1" style="flex-grow: 1;">
         <ui:VisualElement name="Variables" style="flex-grow: 1;">
+            <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" />
             <uie:PropertyField name="minSigmoid" binding-path="minSigmoid" />
             <uie:PropertyField name="maxSigmoid" binding-path="maxSigmoid" />
+            <uie:PropertyField name="Buffer" binding-path="buffer" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
