Added Time as a function

--- a/Assets/UXML/SigmoidCurveVisualTree.uxml
+++ b/Assets/UXML/SigmoidCurveVisualTree.uxml
@@ -4,7 +4,7 @@
             <uie:PropertyField name="minSigmoid" binding-path="minSigmoid" />
             <uie:PropertyField name="maxSigmoid" binding-path="maxSigmoid" />
             <uie:PropertyField name="Buffer" binding-path="buffer" />
-            <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" />
+            <uie:PropertyField name="TimeFrame" binding-path="timeFrame" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
